# taskmanager

./: CMakeLists.txt  LICENSE.md
include/: filemanager.h  log.h  taskmanager.h
lib/cJSON-1.7.18/: CMakeLists.txt
src/: filemanager.c  log.c  main.c
